campfase_sources = files(
'main.f90',
'mod_array_index.f90',
'mod_arrhenius_model.f90',
'mod_axis.f90',
'mod_backup.f90',
'mod_base_functions.f90',
'mod_boundary_condition.f90',
'mod_combinatorics.f90',
'mod_constants.f90',
'mod_crystal_indices.f90',
'mod_fcdata.f90',
'mod_fft_osc.f90',
'mod_fftw.f90',
'mod_files.f90',
'mod_globals.f90',
'mod_graphics.f90',
'mod_hdf5.f90',
'mod_initial_field_settings.f90',
'mod_json.f90',
'mod_mu.f90',
'mod_normal_dist.f90',
'mod_nucleation.f90',
'mod_nucleus.f90',
'mod_numeric_derivatives.f90',
'mod_oc.f90',
'mod_order_parameter_set.f90',
'mod_parameters.f90',
'mod_particle.f90',
'mod_pfm.f90',
'mod_phase_field_energies.f90',
'mod_phase_interface.f90',
'mod_phase_properties.f90',
'mod_phase_set.f90',
'mod_piecewise_linear.f90',
'mod_polycrystal.f90',
'mod_random.f90',
'mod_rational_number.f90',
'mod_realtype.f90',
'mod_regular_grid.f90',
'mod_remap_data.f90',
'mod_solid_shape.f90',
'mod_species_properties.f90',
'mod_spectral.f90',
'mod_step_timer.f90',
'mod_stopwatch.f90',
'mod_time_dep_vars.f90',
'mod_time_step.f90',
'mod_timer.f90',
'mod_timer_set.f90',
'mod_unit_factors.f90',
'mod_user_input.f90')
